Fix horizontal overflow on mobile

--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ body {
     overflow-x: hidden;
     font-weight: 400;
     font-size: 18px;
+    max-width: 100vw;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 .container {
@@ -164,6 +169,8 @@ body {
     z-index: 5;
     opacity: 0.6;
     pointer-events: none;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 
